# LFPykit

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: coveralls.yml  create-release.yml  flake8.yml  flake_PR.yml  lintly.yml  pycodestyle.yml  python-app.yml  python-publish.yml
.travisci/: test_script.sh
doc/source/: conf.py  environment.yml  index.rst  requirements-rtd.txt
example/: Example_EEG_NYHead.ipynb  Example_LFPy.ipynb  Example_LFPy_MEG.ipynb  Example_LFPy_compare_forwardmodels.ipynb  Example_LFPy_pt3d.ipynb  Example_NEURON.ipynb  LFPykit_demo.ipynb  environment.yml  example_LFPy.py  example_LFPy_compare_models.py  example_LFPy_pt3d.ipynb  example_NEURON.py  requirements.txt  sinsyn.mod
examples/: Example_Arbor.ipynb  Example_Arbor_swc.ipynb  Example_Arbor_swc_hybridLFPy.ipynb  Example_EEG_NYHead.ipynb  Example_LFPy.ipynb  Example_LFPy_MEG.ipynb  Example_LFPy_compare_forwardmodels.ipynb  Example_LFPy_pt3d.ipynb  Example_LFPy_swc.ipynb  Example_NEURON.ipynb  Example_Neuron_swc.ipynb  Example_SphericallySymmetricVolCondMEG_vs_InfiniteHomogeneousVolCondMEG.ipynb  LFPykit_demo.ipynb  cProfile-cython.ipynb  cProfile.ipynb  environment.yml  requirements.txt
lfpy_forward_models/: __init__.py  cell.py  cellgeometry.py  eegmegcalc.py  lfpcalc.py  models.py  version.py
lfpykit/: __init__.py  cellgeometry.py  eegmegcalc.py  lfpcalc.py  linesource.pyx  models.py  special.py  version.py
(+7 files in other folders)
